syntax = "proto3";

package conduit.controller.tap;

import "common/common.proto";
import "public/api.proto";

service Tap {
  rpc Tap(public.TapRequest) returns (stream common.TapEvent) {}
  rpc TapByResource(public.TapByResourceRequest) returns (stream common.TapEvent) {}
}
